--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
         </div>
 
         <div class="invitation-cover" id="cover">
-            <div class="cover-content">
-                <h1>Undangan Pernikahan</h1>
-                <div class="names-big">Ray & Anisa</div>
+            <div class="cover-content">                <h1>Undangan Pernikahan</h1>
+                <div class="names-big">Boy & Anisa</div>
                 <p class="date-cover">30 September 2025</p>
                 <button class="open-button" onclick="openInvitation()">Buka Undangan</button>
             </div>
@@ -28,10 +27,8 @@
                 <source src="assets/lesung-pipi.mp3" type="audio/mp3">
             </audio>
             <button id="playButton" onclick="togglePlay()">♪ Putar Musik</button>
-        </div>
-
-    <header class="hero">
-        <h1>Ray & Anisa</h1>
+        </div>    <header class="hero">
+        <h1>Boy & Anisa</h1>
         <p class="date">30 September 2025</p>
     </header>
 
@@ -48,11 +45,9 @@
     <section class="quote">
         <p>"And of His signs is that He created for you from yourselves mates that you may find tranquility in them; and He placed between you affection and mercy."</p>
         <span>- Ar-Rum 30:21 -</span>
-    </section>
-
-    <section class="couple">
+    </section>    <section class="couple">
         <div class="groom">
-            <h2>Ray</h2>
+            <h2>Boy</h2>
             <p>Putra dari</p>
             <p>Bapak Ujang & Ibu Mumun</p>
         </div>
