--- a/index.html
+++ b/index.html
@@ -59,14 +59,36 @@
     </section>    <section class="gallery">
         <h2>Momen Bahagia Kami</h2>
         <div class="photo-grid">
-            <img src="assets/Pose prewedding.jpeg" alt="Pose Prewedding">
-            <img src="assets/Prewedding Adat Jawa.jpeg" alt="Prewedding Adat Jawa">
-            <img src="assets/prewedding Dicky&Eric.jpeg" alt="Prewedding Moment">
-            <img src="assets/Prewedding.jpeg" alt="Prewedding">
-            <img src="assets/Wedding Flatlay _ Polaroid Camera _ Romantic Wedding Styling.jpeg" alt="Wedding Styling">
-            <img src="assets/Windy & Fahmi wedding.jpeg" alt="Wedding Moment">
+            <div class="photo-item">
+                <img src="assets/Pose prewedding.jpeg" alt="Pose Prewedding" loading="lazy">
+            </div>
+            <div class="photo-item">
+                <img src="assets/Prewedding Adat Jawa.jpeg" alt="Prewedding Adat Jawa" loading="lazy">
+            </div>
+            <div class="photo-item">
+                <img src="assets/prewedding Dicky&Eric.jpeg" alt="Prewedding Moment" loading="lazy">
+            </div>
+            <div class="photo-item">
+                <img src="assets/Prewedding.jpeg" alt="Prewedding" loading="lazy">
+            </div>
+            <div class="photo-item">
+                <img src="assets/Wedding Flatlay _ Polaroid Camera _ Romantic Wedding Styling.jpeg" alt="Wedding Styling" loading="lazy">
+            </div>
+            <div class="photo-item">
+                <img src="assets/Windy & Fahmi wedding.jpeg" alt="Wedding Moment" loading="lazy">
+            </div>
         </div>
-    </section>
+    </section>    <!-- Lightbox untuk preview foto -->
+    <div class="lightbox" id="lightbox">
+        <div class="lightbox-container">
+            <img src="" alt="Preview Image">
+            <button class="close-btn">&times;</button>
+            <div class="zoom-controls">
+                <button class="zoom-btn zoom-in">+</button>
+                <button class="zoom-btn zoom-out">-</button>
+            </div>
+        </div>
+    </div>
 
     <section class="location">
         <h2>Lokasi Pernikahan</h2>
