--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
         <p class="date">30 September 2025</p>
     </header>
 
-    <section class="countdown">
-        <h2>Menghitung Hari ke Hari Bahagia</h2>
-        <div id="timer">
+    <section class="countdown section">
+        <h2 class="animate-in">Menghitung Hari ke Hari Bahagia</h2>
+        <div id="timer" class="animate-in">
             <div><span id="days">00</span><p>Hari</p></div>
             <div><span id="hours">00</span><p>Jam</p></div>
             <div><span id="minutes">00</span><p>Menit</p></div>
