--- a/index.html
+++ b/index.html
@@ -64,25 +64,61 @@
         <h2>Momen Bahagia Kami</h2>
         <div class="photo-grid">
             <div class="photo-item">
-                <img src="assets/Pose prewedding.jpeg" alt="Pose Prewedding" loading="lazy">
+                <img 
+                    src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" 
+                    data-src="assets/Pose prewedding.jpeg" 
+                    alt="Pose Prewedding" 
+                    loading="lazy"
+                    onError="this.onerror=null;this.src='data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7';"
+                >
             </div>
             <div class="photo-item">
-                <img src="assets/Prewedding Adat Jawa.jpeg" alt="Prewedding Adat Jawa" loading="lazy">
+                <img 
+                    src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" 
+                    data-src="assets/Prewedding Adat Jawa.jpeg" 
+                    alt="Prewedding Adat Jawa" 
+                    loading="lazy"
+                    onError="this.onerror=null;this.src='data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7';"
+                >
             </div>
             <div class="photo-item">
-                <img src="assets/prewedding Dicky&Eric.jpeg" alt="Prewedding Moment" loading="lazy">
+                <img 
+                    src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" 
+                    data-src="assets/prewedding Dicky&Eric.jpeg" 
+                    alt="Prewedding Moment" 
+                    loading="lazy"
+                    onError="this.onerror=null;this.src='data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7';"
+                >
             </div>
             <div class="photo-item">
-                <img src="assets/Prewedding.jpeg" alt="Prewedding" loading="lazy">
+                <img 
+                    src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" 
+                    data-src="assets/Prewedding.jpeg" 
+                    alt="Prewedding" 
+                    loading="lazy"
+                    onError="this.onerror=null;this.src='data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7';"
+                >
             </div>
             <div class="photo-item">
-                <img src="assets/Wedding Flatlay _ Polaroid Camera _ Romantic Wedding Styling.jpeg" alt="Wedding Styling" loading="lazy">
+                <img 
+                    src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" 
+                    data-src="assets/Wedding Flatlay _ Polaroid Camera _ Romantic Wedding Styling.jpeg" 
+                    alt="Wedding Styling" 
+                    loading="lazy"
+                    onError="this.onerror=null;this.src='data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7';"
+                >
             </div>
             <div class="photo-item">
-                <img src="assets/Windy & Fahmi wedding.jpeg" alt="Wedding Moment" loading="lazy">
+                <img 
+                    src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" 
+                    data-src="assets/Windy & Fahmi wedding.jpeg" 
+                    alt="Wedding Moment" 
+                    loading="lazy"
+                    onError="this.onerror=null;this.src='data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7';"
+                >
             </div>
         </div>
-    </section>    <!-- Lightbox untuk preview foto -->
+    </section><!-- Lightbox untuk preview foto -->
     <div class="lightbox" id="lightbox">
         <div class="lightbox-container">
             <img src="" alt="Preview Image">
