--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
     </section>    <section class="gift">
         <h2>Amplop Digital</h2>
         <p>Kehadiran Anda adalah hadiah terindah bagi kami. Namun, jika Anda berkenan memberikan tanda kasih, silakan scan QR code di bawah ini:</p>
-        <img src="assets/qr-code.png" alt="QR Code untuk amplop digital" class="qr-code">
+        <img src="assets/qr.jpg" alt="QR Code untuk amplop digital" class="qr-code">
     </section>
 
     <section class="comments">
