--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
-    <title>Ray & Anisa Wedding Invitation</title>
+    <title>Resawan & Rina Wedding Invitation</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
 </head>
@@ -19,8 +19,8 @@
             <div class="invitation-cover" id="cover">
                 <div class="cover-content">
                     <h1>Undangan Pernikahan</h1>
-                    <div class="names-big">Boy & Anisa</div>
-                    <p class="date-cover">30 September 2025</p>
+                    <div class="names-big">Resawan & Rina</div>
+                    <p class="date-cover">08 April 2027</p>
                     <button class="open-button" onclick="openInvitation()">Buka Undangan</button>
                 </div>
             </div>
@@ -32,8 +32,8 @@
             </audio>
             <button id="playButton" onclick="togglePlay()">♪ Putar Musik</button>
         </div>    <header class="hero">
-        <h1>Boy & Anisa</h1>
-        <p class="date">30 September 2025</p>
+        <h1>Resawan & Rina</h1>
+        <p class="date">08 April 2027</p>
     </header>
 
     <section class="countdown section">
@@ -51,14 +51,14 @@
         <span>- Ar-Rum 30:21 -</span>
     </section>    <section class="couple">
         <div class="groom">
-            <h2>Boy</h2>
+            <h2>Resawan</h2>
             <p>Putra dari</p>
-            <p>Bapak Ujang & Ibu Mumun</p>
+            <p>Bapak Fulan & Ibu Fulanah</p>
         </div>
         <div class="bride">
-            <h2>Anisa</h2>
+            <h2>Rina</h2>
             <p>Putri dari</p>
-            <p>Bapak Maman & Ibu Euis</p>
+            <p>Bapak Fulan & Ibu Fulanah</p>
         </div>
     </section>    <section class="gallery">
         <h2>Momen Bahagia Kami</h2>
@@ -66,8 +66,8 @@
             <div class="photo-item">
                 <img 
                     src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" 
-                    data-src="assets/Pose prewedding.jpeg" 
-                    alt="Pose Prewedding" 
+                    data-src="assets2/poto1.jpg" 
+                    alt="Momen 1" 
                     loading="lazy"
                     onError="this.onerror=null;this.src='data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7';"
                 >
@@ -75,8 +75,8 @@
             <div class="photo-item">
                 <img 
                     src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" 
-                    data-src="assets/Prewedding Adat Jawa.jpeg" 
-                    alt="Prewedding Adat Jawa" 
+                    data-src="assets2/poto2.jpg" 
+                    alt="Momen 2" 
                     loading="lazy"
                     onError="this.onerror=null;this.src='data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7';"
                 >
@@ -84,8 +84,8 @@
             <div class="photo-item">
                 <img 
                     src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" 
-                    data-src="assets/prewedding Dicky&Eric.jpeg" 
-                    alt="Prewedding Moment" 
+                    data-src="assets2/poto3.jpg" 
+                    alt="Momen 3" 
                     loading="lazy"
                     onError="this.onerror=null;this.src='data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7';"
                 >
@@ -93,8 +93,8 @@
             <div class="photo-item">
                 <img 
                     src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" 
-                    data-src="assets/Prewedding.jpeg" 
-                    alt="Prewedding" 
+                    data-src="assets2/poto4.jpg" 
+                    alt="Momen 4" 
                     loading="lazy"
                     onError="this.onerror=null;this.src='data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7';"
                 >
@@ -102,8 +102,8 @@
             <div class="photo-item">
                 <img 
                     src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" 
-                    data-src="assets/Wedding Flatlay _ Polaroid Camera _ Romantic Wedding Styling.jpeg" 
-                    alt="Wedding Styling" 
+                    data-src="assets2/poto5.jpg" 
+                    alt="Momen 5" 
                     loading="lazy"
                     onError="this.onerror=null;this.src='data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7';"
                 >
@@ -111,8 +111,62 @@
             <div class="photo-item">
                 <img 
                     src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" 
-                    data-src="assets/Windy & Fahmi wedding.jpeg" 
-                    alt="Wedding Moment" 
+                    data-src="assets2/poto6.jpg" 
+                    alt="Momen 6" 
+                    loading="lazy"
+                    onError="this.onerror=null;this.src='data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7';"
+                >
+            </div>
+            <div class="photo-item">
+                <img 
+                    src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" 
+                    data-src="assets2/poto7.jpg" 
+                    alt="Momen 7" 
+                    loading="lazy"
+                    onError="this.onerror=null;this.src='data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7';"
+                >
+            </div>
+            <div class="photo-item">
+                <img 
+                    src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" 
+                    data-src="assets2/poto8.jpg" 
+                    alt="Momen 8" 
+                    loading="lazy"
+                    onError="this.onerror=null;this.src='data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7';"
+                >
+            </div>
+            <div class="photo-item">
+                <img 
+                    src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" 
+                    data-src="assets2/poto9.jpg" 
+                    alt="Momen 9" 
+                    loading="lazy"
+                    onError="this.onerror=null;this.src='data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7';"
+                >
+            </div>
+            <div class="photo-item">
+                <img 
+                    src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" 
+                    data-src="assets2/poto10.jpg" 
+                    alt="Momen 10" 
+                    loading="lazy"
+                    onError="this.onerror=null;this.src='data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7';"
+                >
+            </div>
+            <div class="photo-item">
+                <img 
+                    src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" 
+                    data-src="assets2/poto11.jpg" 
+                    alt="Momen 11" 
+                    loading="lazy"
+                    onError="this.onerror=null;this.src='data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7';"
+                >
+            </div>
+            <div class="photo-item">
+                <img 
+                    src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" 
+                    data-src="assets2/poto12.jpg" 
+                    alt="Momen 12" 
                     loading="lazy"
                     onError="this.onerror=null;this.src='data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7';"
                 >
@@ -184,7 +238,7 @@
 
     <footer>
         <p>Kami tidak sabar menunggu kehadiran Anda!</p>
-        <p class="names">Ray & Anisa</p>
+        <p class="names">Resawan & Rina</p>
     </footer>
     </div>
 
