--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+zhtml lang="en">
 <head>    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -187,7 +187,7 @@
     <section class="location">
         <h2>Lokasi Pernikahan</h2>
         <div class="map-container">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3965.9839008934333!2d106.82145797575666!3d-6.269028193705367!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69f23ff29000ab%3A0x9db43502185a6c4!2sGedung%20Pernikahan%20Graha%20Mandiri%20Auditorium!5e0!3m2!1sen!2sid!4v1684141234567!5m2!1sen!2sid" 
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d63359.96447983644!2d107.573116!3d-6.902477!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e68e7d1e6b7b1e1%3A0x401e8f1fc28d6e0!2sGedung%20Sate!5e0!3m2!1sen!2sid!4v1684141234567!5m2!1sen!2sid" 
                 width="100%" 
                 height="450" 
                 style="border:0;" 
@@ -197,9 +197,9 @@
             </iframe>
         </div>
         <div class="location-details">
-            <h3>Graha Mandiri Auditorium</h3>
-            <p>Jl. Imam Bonjol No.61, RT.2/RW.4, Menteng, Kec. Menteng, Kota Jakarta Pusat</p>
-            <a href="https://maps.app.goo.gl/BJeKewNyhHqH3JTXA" target="_blank" class="directions-button">Petunjuk Arah</a>
+            <h3>Gedung Sate</h3>
+            <p>Jl. Diponegoro No.22, Citarum, Kec. Bandung Wetan, Kota Bandung, Jawa Barat 40115</p>
+            <a href="https://maps.app.goo.gl/6Qw6Qw2v8Qw6Qw2v8" target="_blank" class="directions-button">Petunjuk Arah</a>
         </div>
     </section>
 
