--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
         <div class="groom">
             <h2>Resawan</h2>
             <p>Putra dari</p>
-            <p>Bapak Fulan & Ibu Fulanah</p>
+            <p>Bapak Beben & Ibu Winarsih</p>
         </div>
         <div class="bride">
             <h2>Rina</h2>
             <p>Putri dari</p>
-            <p>Bapak Fulan & Ibu Fulanah</p>
+            <p>Bapak Sobarna & Ibu Ai Kartini</p>
         </div>
     </section>    <section class="gallery">
         <h2>Momen Bahagia Kami</h2>
