--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <div class="photo-item">
                 <img 
                     src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" 
-                    data-src="assets2/poto1.jpg" 
+                    data-src="assets2/photo13.jpg" 
                     alt="Momen 1" 
                     loading="lazy"
                     onError="this.onerror=null;this.src='data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7';"
